k8s/echo_grpc_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-grpc-deploy
  labels:
    app: grpc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: grpc
  template:
    metadata:
      labels:
        app: grpc
    spec:
      containers:
      - name: server-grpc
        image: idirall22/gateway:v1
        imagePullPolicy: "Always"
        ports:
          - name: http
            containerPort: 8080
