k8s/echo_rest_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-rest-deploy
  labels:
    app: rest
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rest
  template:
    metadata:
      labels:
        app: rest
    spec:
      containers:
      - name: server-rest
        image: idirall22/gateway:v1
        imagePullPolicy: "Always"
        ports:
          - name: http
            containerPort: 8081
