k8s/echo_grpc_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-server-service
spec:
    type: ClusterIP
    selector:
        app: grpc
    ports:
        - protocol: TCP
          port: 8080
          targetPort: http
          # nodePort: 30036
