k8s/echo_rest_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-server-service
spec:
    type: ClusterIP
    selector:
        app: rest
    ports:
        - protocol: TCP
          port: 8081
          targetPort: http
          # nodePort: 30037
