k8s/ingress_service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        - http:
            paths:
                - path: /
                  backend:
                    serviceName: rest-server-service
                    servicePort: 8081
                - path: /grpc/
                  backend:
                    serviceName: grpc-server-service
                    servicePort: 8080
